src/css/global/_mixins.scss
@mixin page-container {
    padding-top: 35px;
    margin-right: auto;
    margin-left: auto;
    width: 100%;
    max-width: 1200px;
}

@mixin page-header {
    display: flex;
    justify-content: left;
    gap: 10px;
    align-items: baseline;
    margin-bottom: 1.5rem;
    vertical-align: text-bottom;
    &-title {
        font-size: 1.4rem;
        font-weight: bold;
    }
}

@mixin page-header-nav-btn {
    cursor: pointer;
    height: 22px;
    width: 22px;
    color: white;
    background-color: $grey;
    border: solid 1.25px $grey;
    border-radius: 6px;
    display: flex;
    justify-content: center;
    align-items: center;
    &--left {
        padding-right: 1px;
    }
    &--right {
        padding-left: 1px;
    }
    .q-dark & {
        color: rgb(8, 29, 53);
    }    
}

@mixin tabs-container {
    display: inline-flex;
    gap: 1rem;
    &-content {
        display: flex;
        gap: 10px;
        margin-bottom: 10px;
    }
    &-tab {
        padding: 0px 20px;
        min-height: 35px !important;
        cursor: pointer;
        border-radius: 5px;
        text-transform: none;
        color: var(--text-color);
        background-color: var(--tab-bg-color);

        &--active {
            color: var(--active-tab-text-color);
            background-color: var(--active-tab-bg-color);
        }
    }
}

